# MinesweeperBot

./: README.md  pyproject.toml
minesweeper/: __init__.py  __main__.py  bot.py  generate.py
