[tool.poetry]
name = "MinesweeperBot"
version = "0.1.0"
description = "Play minesweeper with spoilers in discord."
authors = ["Nate <minecraftcrusher100@gmail.com>"]
license = "GPLv3-or-later"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"
nextcord = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring"
]